# scree

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  mkdocs.yml  pyproject.toml
.cache/plugin/social/: manifest.json
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: ci.yml  docs.yml
benchmarks/: README.md  bench_memory.py  bench_throughput.py  modal_autograd_bench.py  modal_autotune_probe.py  modal_autotune_probe_isolated.py  modal_bench.py  modal_multishape_sweep.py  modal_norm_bench.py
docs/: api.md  architecture.md  benchmarks.md  bridges.md  concepts.md  endorser-dms.md  faq.md  getting-started.md  index.md  kernels.md  launch-blog-draft.md  launch-day-runbook.md  vllm-integration-sketch.md
docs/assets/: extra.css
examples/: 01_quickstart.py  02_no_pad_transformer.py  03_train_step.py  04_hf_compat.py  05_multimodal_interleaved.py
src/scree/: __init__.py  _core.py
src/scree/bridges/: __init__.py  _dlpack.py  _hf_padded.py  _torch_nested.py
src/scree/kernels/reference/: __init__.py  varlen_attention.py  varlen_layernorm.py  varlen_rmsnorm.py  varlen_softmax.py
src/scree/kernels/triton/: __init__.py  _autograd.py  _backward.py  varlen_attention.py  varlen_layernorm.py  varlen_rmsnorm.py
tests/: test_array_api.py  test_autograd.py  test_bridges.py  test_core.py  test_jax.py  test_mlx.py  test_properties.py  test_varlen_kernels.py
