[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scree"
version = "0.0.1"
description = "Cross-framework ragged tensor primitive with reference varlen kernels"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "scree contributors"}]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.24",
]

[project.optional-dependencies]
torch = ["torch>=2.1"]
jax = ["jax>=0.4", "jaxlib>=0.4"]
mlx = ["mlx>=0.20"]
triton = ["triton>=2.3"]
bench = ["modal>=0.60"]
dev = ["pytest>=7", "pytest-cov", "hypothesis>=6"]
docs = ["mkdocs-material>=9"]

[project.urls]
Homepage = "https://github.com/jvoltci/scree"
Documentation = "https://jvoltci.github.io/scree/"
Issues = "https://github.com/jvoltci/scree/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
